# ublue-updater

./: .gitignore  README.md  io.github.rfrench3.pyside6-flatpak-template.desktop  io.github.rfrench3.pyside6-flatpak-template.metainfo.xml  io.github.rfrench3.ublue-updater.desktop  io.github.rfrench3.ublue-updater.metainfo.xml  io.github.rfrench3.ublue-updater.yml  pyproject.toml  requirements.txt
src/: advanced_main_window.ui  main.py  main.ui  main_window.ui  widget_manager.py
src/ublue_updater/: app.py  main.py  program_file_locator.py  widget_manager.py
src/ublue_updater/qml/: Main.qml
