[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ublue-updater"
version = "1.0.0"
description = "Frontend utility for the Bazzite and Universal Blue updater"
authors = [
    { name = "Robert French", email = "frenchrobertm@outlook.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "PySide6"
]

[project.urls]
Homepage = "https://github.com/rfrench3/ublue-updater"
Repository = "https://github.com/rfrench3/ublue-updater"

[project.scripts]
ublue-updater = "ublue_updater.app:main"

[tool.setuptools]
packages = ["ublue_updater"]
package-dir = {ublue-updater = "src"}
include-package-data = true

[tool.setuptools.data-files]
"share/applications" = ["io.github.rfrench3.ublue-updater.desktop"]
"share/icons/hicolor/scalable/apps" = ["io.github.rfrench3.ublue-updater.svg"]
"share/metainfo" = ["io.github.rfrench3.ublue-updater.metainfo.xml"]


